--- a/client/store/pom.xml
+++ b/client/store/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>time4u-client-store</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>time4u-client-store</name>
 	<version>0.9.0-SNAPSHOT</version>
 	<dependencies>
