--- a/client/ui/pom.xml
+++ b/client/ui/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>time4u-client-ui</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>time4u-client-ui</name>
 	<version>0.9.0-SNAPSHOT</version>
 	<dependencies>
@@ -35,6 +35,11 @@
 		<dependency>
 			<groupId>org.eclipse.swt.carbon</groupId>
 			<artifactId>macosx</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>de.objectcode.time4u.client</groupId>
+			<artifactId>time4u-client-store</artifactId>
+			<version>${pom.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
