--- a/assemblies/server-deploy/pom.xml
+++ b/assemblies/server-deploy/pom.xml
@@ -18,6 +18,10 @@
 			<type>ear</type>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
