--- a/assemblies/server-deploy/src/main/script/build.properties
+++ b/assemblies/server-deploy/src/main/script/build.properties
@@ -5,7 +5,8 @@ jboss.home=/Users/junglas/workspaces/jboss-4.2.3.GA
 jboss.config=time4u
 
 # Database engine
-db.engine=mysql
+db.engine=derby
+#db.engine=mysql
 
 db.host=192.168.23.128
 db.name=time4u
