--- a/server/ejb/pom.xml
+++ b/server/ejb/pom.xml
@@ -52,6 +52,10 @@
 			<groupId>jboss</groupId>
 			<artifactId>jboss-annotations-ejb3</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>jboss</groupId>
+			<artifactId>jboss-ejb3</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
