--- a/client/ui/pom.xml
+++ b/client/ui/pom.xml
@@ -10,7 +10,6 @@
 	<artifactId>time4u-client-ui</artifactId>
 	<packaging>jar</packaging>
 	<name>time4u-client-ui</name>
-	<version>0.9.0-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.eclipse</groupId>
@@ -33,10 +32,6 @@
 			<artifactId>swt</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.swt.carbon</groupId>
-			<artifactId>macosx</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>de.objectcode.time4u.client</groupId>
 			<artifactId>time4u-client-store</artifactId>
 			<version>${pom.version}</version>
@@ -44,28 +39,6 @@
 	</dependencies>
 	<build>
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>resources</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<executions>
@@ -87,4 +60,20 @@
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>MacOS</id>
+			<activation>
+				<os>
+					<name>Mac OS X</name>
+				</os>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.eclipse.swt.carbon</groupId>
+					<artifactId>macosx</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
