--- a/assemblies/client-mac/pom.xml
+++ b/assemblies/client-mac/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>de.objectcode.time4u.assemblies</groupId>
-		<artifactId>time4u-assemblies</artifactId>
+		<artifactId>base</artifactId>
 		<version>0.9.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
@@ -13,27 +13,131 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.objectcode.time4u.client</groupId>
-			<artifactId>time4u-client-store</artifactId>	
+			<artifactId>store</artifactId>
 			<version>${pom.version}</version>
 			<classifier>plugin</classifier>
 		</dependency>
 		<dependency>
 			<groupId>de.objectcode.time4u.client</groupId>
-			<artifactId>time4u-client-connection</artifactId>	
+			<artifactId>connection</artifactId>
 			<version>${pom.version}</version>
 			<classifier>plugin</classifier>
 		</dependency>
 		<dependency>
 			<groupId>de.objectcode.time4u.client</groupId>
-			<artifactId>time4u-client-ui</artifactId>	
+			<artifactId>ui</artifactId>
 			<version>${pom.version}</version>
 			<classifier>plugin</classifier>
 		</dependency>
 		<dependency>
 			<groupId>de.objectcode.time4u.client</groupId>
-			<artifactId>time4u-client-connection</artifactId>	
+			<artifactId>feature</artifactId>
 			<version>${pom.version}</version>
 			<classifier>feature</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse</groupId>
+			<artifactId>osgi</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse</groupId>
+			<artifactId>ui</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse</groupId>
+			<artifactId>rcp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse</groupId>
+			<artifactId>help</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.core</groupId>
+			<artifactId>runtime</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.core.runtime.compatibility</groupId>
+			<artifactId>auth</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.core</groupId>
+			<artifactId>commands</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.core</groupId>
+			<artifactId>contenttype</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.core</groupId>
+			<artifactId>databinding</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.core</groupId>
+			<artifactId>expressions</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.core</groupId>
+			<artifactId>jobs</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.core.databinding</groupId>
+			<artifactId>beans</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.equinox</groupId>
+			<artifactId>app</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.equinox</groupId>
+			<artifactId>common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.equinox</groupId>
+			<artifactId>launcher</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.equinox</groupId>
+			<artifactId>preferences</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.equinox</groupId>
+			<artifactId>registry</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.equinox</groupId>
+			<artifactId>simpleconfigurator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.equinox.launcher.carbon</groupId>
+			<artifactId>macosx</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.ui</groupId>
+			<artifactId>workbench</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.ui</groupId>
+			<artifactId>carbon</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse</groupId>
+			<artifactId>jface</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jface</groupId>
+			<artifactId>databinding</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse</groupId>
+			<artifactId>swt</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.update</groupId>
+			<artifactId>configurator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.ibm</groupId>
+			<artifactId>icu</artifactId>
 		</dependency>
 	</dependencies>
 	<profiles>
@@ -46,30 +150,31 @@
 			</activation>
 			<dependencies>
 				<dependency>
-					<groupId>org.eclipse</groupId>
-					<artifactId>osgi</artifactId>
-				</dependency>
-				<dependency>
-					<groupId>org.eclipse.core</groupId>
-					<artifactId>runtime</artifactId>
-				</dependency>
-				<dependency>
-					<groupId>org.eclipse.ui</groupId>
-					<artifactId>workbench</artifactId>
-				</dependency>
-				<dependency>
-					<groupId>org.eclipse</groupId>
-					<artifactId>jface</artifactId>
-				</dependency>
-				<dependency>
-					<groupId>org.eclipse</groupId>
-					<artifactId>swt</artifactId>
-				</dependency>
-				<dependency>
 					<groupId>org.eclipse.swt.carbon</groupId>
 					<artifactId>macosx</artifactId>
 				</dependency>
 			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>attached</goal>
+									<goal>directory-inline</goal>
+								</goals>
+								<configuration>
+									<descriptors>
+										<descriptor>${basedir}/src/main/assembly/mac-client.xml</descriptor>
+									</descriptors>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 </project>
