--- a/client/connection/pom.xml
+++ b/client/connection/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>de.objectcode.time4u.client</groupId>
-		<artifactId>time4u-client</artifactId>
+		<artifactId>base</artifactId>
 		<version>0.9.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>time4u-client-connection</artifactId>
+	<artifactId>connection</artifactId>
 	<packaging>jar</packaging>
 	<name>time4u-client-connection</name>
 	<dependencies>
