--- a/client/ui/pom.xml
+++ b/client/ui/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>de.objectcode.time4u.client</groupId>
-		<artifactId>time4u-client</artifactId>
+		<artifactId>base</artifactId>
 		<version>0.9.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>time4u-client-ui</artifactId>
+	<artifactId>ui</artifactId>
 	<packaging>jar</packaging>
 	<name>time4u-client-ui</name>
 	<dependencies>
@@ -33,7 +33,7 @@
 		</dependency>
 		<dependency>
 			<groupId>de.objectcode.time4u.client</groupId>
-			<artifactId>time4u-client-store</artifactId>
+			<artifactId>store</artifactId>
 			<version>${pom.version}</version>
 		</dependency>
 	</dependencies>
