--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.objectcode.time4u</groupId>
-	<artifactId>time4u</artifactId>
+	<artifactId>base</artifactId>
 	<version>0.9.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>time4u</name>
@@ -35,39 +35,138 @@
 				<groupId>org.eclipse</groupId>
 				<artifactId>osgi</artifactId>
 				<version>3.4.0</version>
-				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse</groupId>
+				<artifactId>ui</artifactId>
+				<version>3.4.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse</groupId>
+				<artifactId>rcp</artifactId>
+				<version>3.4.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse</groupId>
+				<artifactId>help</artifactId>
+				<version>3.3.100</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.core</groupId>
 				<artifactId>runtime</artifactId>
 				<version>3.4.0</version>
-				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.core.runtime.compatibility</groupId>
+				<artifactId>auth</artifactId>
+				<version>3.2.100</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.core</groupId>
+				<artifactId>commands</artifactId>
+				<version>3.4.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.core</groupId>
+				<artifactId>contenttype</artifactId>
+				<version>3.3.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.core</groupId>
+				<artifactId>databinding</artifactId>
+				<version>1.1.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.core</groupId>
+				<artifactId>expressions</artifactId>
+				<version>3.4.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.core</groupId>
+				<artifactId>jobs</artifactId>
+				<version>3.4.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.core.databinding</groupId>
+				<artifactId>beans</artifactId>
+				<version>1.1.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.equinox</groupId>
+				<artifactId>app</artifactId>
+				<version>1.1.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.equinox</groupId>
+				<artifactId>common</artifactId>
+				<version>3.4.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.equinox</groupId>
+				<artifactId>launcher</artifactId>
+				<version>1.0.100</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.equinox</groupId>
+				<artifactId>preferences</artifactId>
+				<version>3.2.200</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.equinox</groupId>
+				<artifactId>registry</artifactId>
+				<version>3.4.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.equinox</groupId>
+				<artifactId>simpleconfigurator</artifactId>
+				<version>1.0.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.equinox.launcher.carbon</groupId>
+				<artifactId>macosx</artifactId>
+				<version>1.0.100</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.ui</groupId>
 				<artifactId>workbench</artifactId>
 				<version>3.4.0</version>
-				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.ui</groupId>
+				<artifactId>carbon</artifactId>
+				<version>4.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse</groupId>
 				<artifactId>jface</artifactId>
 				<version>3.4.0</version>
-				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jface</groupId>
+				<artifactId>databinding</artifactId>
+				<version>1.2.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse</groupId>
 				<artifactId>swt</artifactId>
 				<version>3.4.0</version>
-				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.swt.carbon</groupId>
 				<artifactId>macosx</artifactId>
 				<version>3.4.0</version>
-				<scope>provided</scope>
 			</dependency>
-			
+			<dependency>
+				<groupId>org.eclipse.update</groupId>
+				<artifactId>configurator</artifactId>
+				<version>3.2.200</version>
+			</dependency>
+			<dependency>
+				<groupId>com.ibm</groupId>
+				<artifactId>icu</artifactId>
+				<version>3.8.1</version>
+			</dependency>
+
 			<!-- Hibernate -->
 			<dependency>
 				<groupId>org.hibernate</groupId>
