--- a/server/ejb/pom.xml
+++ b/server/ejb/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>de.objectcode.time4u.server</groupId>
-		<artifactId>time4u-server</artifactId>
+		<artifactId>base</artifactId>
 		<version>0.9.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
