--- a/server/entities/pom.xml
+++ b/server/entities/pom.xml
@@ -23,6 +23,10 @@
 			<artifactId>persistence-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-annotations</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.ejb</groupId>
 			<artifactId>ejb-api</artifactId>
 		</dependency>
