--- a/client/store/.classpath
+++ b/client/store/.classpath
@@ -15,5 +15,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="src/test/java"/>
+	<classpathentry kind="lib" path="target/dependency/testng-jdk15.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
