--- a/pom.xml
+++ b/pom.xml
@@ -291,6 +291,15 @@
 				<artifactId>derby</artifactId>
 				<version>10.4.2.0</version>
 			</dependency>
+			
+			<!-- Unit Testing -->
+			<dependency>
+				<groupId>org.testng</groupId>
+				<artifactId>testng</artifactId>
+				<version>5.8</version>
+				<classifier>jdk15</classifier>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
