--- a/client/ui/build.properties
+++ b/client/ui/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                product_lg.gif,\
                splash.bmp,\
                plugin_customization.ini,\
-               plugin.xml
+               plugin.xml,\
+               plugin.properties
