--- a/client/store/build.properties
+++ b/client/store/build.properties
@@ -13,4 +13,6 @@ bin.includes = META-INF/,\
                target/dependency/dom4j.jar,\
                target/dependency/commons-logging.jar,\
                target/dependency/persistence-api.jar,\
-               target/dependency/commons-collections.jar
+               target/dependency/commons-collections.jar,\
+               plugin.xml,\
+               schema/
