--- a/client/store/build.properties
+++ b/client/store/build.properties
@@ -15,4 +15,5 @@ bin.includes = META-INF/,\
                target/dependency/persistence-api.jar,\
                target/dependency/commons-collections.jar,\
                plugin.xml,\
-               schema/
+               schema/,\
+               target/dependency/jta.jar
