Restored old layout
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@54 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/client/ui/plugin.properties
+++ b/client/ui/plugin.properties
@@ -33,10 +33,10 @@ todo.priority.label = Priority
 
 punchView.title = Punch
 
-statisticView.title = Statistics
-statisticView.mainProject.label = Main Project
-statisticView.all.label = All
-statisticView.overtime.label = Overtime
+statisticsView.title = Statistics
+statisticsView.mainProject.label = Main Project
+statisticsView.all.label = All
+statisticsView.overtime.label = Overtime
 
 menu.synchronize.label = &Synchronization
 menu.projectTask.label = &Project / Task
